--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <div class="card mb-3 mx-auto mt-5" style="max-width: 650px;">
     <div class="row g-0">
       <div class="col-md-6">
-        <img src="/images/image-product-desktop.jpg" class=" d-none d-sm-block w-100 rounded-start" alt="product image" style="height:501px;">
-        <img src="/images/image-product-mobile.jpg" class=" d-block d-sm-none w-100 rounded-start" alt="product image"">
+        <img src="/images/image-product-desktop.jpeg" class=" d-none d-sm-block w-100 rounded-start" alt="product image" style="height:501px;">
+        <img src="/images/image-product-mobile.jpeg" class=" d-block d-sm-none w-100 rounded-start" alt="product image"">
       </div>
       <div class="col-md-6">
         <div class="card-body">
