--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/ftimurlenk/product-preview-card-component-main/master/imagesfavicon-32x32.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css
   ">
   <link rel="stylesheet" href="style.css">
@@ -24,8 +24,8 @@
   <div class="card mb-3 mx-auto mt-5" style="max-width: 650px;">
     <div class="row g-0">
       <div class="col-md-6">
-        <img src="https://ftimurlenk.github.io/product-preview-card-component-main/images/image-product-desktop.jpg" class=" d-none d-sm-block w-100 rounded-start" alt="product image" style="height:501px;">
-        <img src="https://ftimurlenk.github.io/product-preview-card-component-main/images/image-product-mobile.jpg" class=" d-block d-sm-none w-100 rounded-start" alt="product image"">
+        <img src="https://raw.githubusercontent.com/ftimurlenk/product-preview-card-component-main/master/images/image-product-desktop.jpg" class=" d-none d-sm-block w-100 rounded-start" alt="product image" style="height:501px;">
+        <img src="https://raw.githubusercontent.com/ftimurlenk/product-preview-card-component-main/master/images/image-product-mobile.jpg" class=" d-block d-sm-none w-100 rounded-start" alt="product image"">
       </div>
       <div class="col-md-6">
         <div class="card-body">
